--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aos": "^3.0.0-beta.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "remixicon": "^4.7.0",
     "tailwindcss": "^4.1.17"
   },
